# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "cert_manager_standard/cert_manager_standard_test"

ohos_unittest("cm_sdk_test") {
  module_out_path = module_output_path
  sources = [
    "unittest/src/cm_abort_test.cpp",
    "unittest/src/cm_app_cert_test.cpp",
    "unittest/src/cm_finish_test.cpp",
    "unittest/src/cm_get_auth_list_test.cpp",
    "unittest/src/cm_get_certinfo_test.cpp",
    "unittest/src/cm_get_certlist_test.cpp",
    "unittest/src/cm_grant_test.cpp",
    "unittest/src/cm_init_test.cpp",
    "unittest/src/cm_is_authed_test.cpp",
    "unittest/src/cm_remove_grant_test.cpp",
    "unittest/src/cm_set_status_test.cpp",
    "unittest/src/cm_test_common.cpp",
    "unittest/src/cm_update_test.cpp",
    "unittest/src/cm_user_cert_test.cpp",
  ]

  include_dirs = [
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//commonlibrary/c_utils/base/include",
    "//third_party/bounds_checking_function/include",
    "unittest/include",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]
  cflags = cflags_cc
  deps = [
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//base/security/certificate_manager/frameworks/cert_manager_standard/main:cert_manager_standard_frameworks",
    "//base/security/certificate_manager/interfaces/innerkits/cert_manager_standard/main:cert_manager_sdk",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
  ]
  external_deps = [ "c_utils:utils" ]
  resource_config_file = "//base/security/certificate_manager/test/resource/certificate_manager/ohos_test.xml"
}

group("unittest") {
  testonly = true
  deps = [ ":cm_sdk_test" ]
}

group("module_test") {
  testonly = true
  deps = [ "//base/security/certificate_manager/test/unittest/module_test:cm_module_test" ]
}
