# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("cert_manager_service.rc") {
  source = "cert_manager_service.cfg"
  relative_install_dir = "init"
  subsystem_name = "security"
  part_name = "certificate_manager"
}

ohos_shared_library("cert_manager_service") {
  sanitize = {
    cfi = true
    debug = false
    blocklist = "//base/security/certificate_manager/cfi_blocklist.txt"
  }
  subsystem_name = "security"
  part_name = "certificate_manager"
  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]
  deps = [
    ":cert_manager_service.rc",
    "//base/security/certificate_manager/services/cert_manager_standard/cert_manager_service/main:libcert_manager_service_standard_static",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
